<!--
  ~     This file is part of Recordie.
  ~
  ~     Recordie is free software: you can redistribute it and/or modify
  ~     it under the terms of the GNU General Public License as published by
  ~     the Free Software Foundation, either version 3 of the License, or
  ~     (at your option) any later version.
  ~
  ~     Recordie is distributed in the hope that it will be useful,
  ~     but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~     GNU General Public License for more details.
  ~
  ~     You should have received a copy of the GNU General Public License
  ~     along with Recordie.  If not, see <https://www.gnu.org/licenses/>.
  -->

<resources>
    <!-- Activity names -->
    <string translatable="false" name="app_name">Recordie</string>
    <string name="settings_activity_name">Settings</string>
    <string name="about_activity_name">About</string>

    <!-- Menu strings -->

    <!-- Toast message for casting permission denied -->
    <string name="permission_cast_denied">Cast permission not granted</string>
    <!-- Toast message for generic permission denied -->
    <string name="permission_usages_denied">The app cannot work without the required user permissions</string>
    <!-- Toast message for notifying the user that he won't get the video list - lol -->
    <string name="permission_storage_denied">You will not be able to see the recorded videos without this permission</string>

    <!-- Settings -->

    <!-- Video configurations -->
    <string name="video_category">Video</string>
    <string name="bit_rate_title">Bitrate</string>
    <string name="frame_rate_title">Frame rate</string>
    <!-- Audio configurations -->
    <string name="audio_category">Audio</string>
    <string name="audio_recording_title">Audio recording</string>
    <!-- Misc configurations -->
    <string name="misc_category">Miscellaneous</string>
    <string name="shake_stop_title">Shake to stop</string>
    <string name="screen_stop_title">Turn off screen to stop</string>
    <string name="rec_delay_title">Recording delay (seconds)</string>
    <!-- Theme configurations -->
    <string name="theme_category">Theme</string>
    <string name="dark_mode_title">App theme</string>
    <string name="system_theme">Automatic (system)</string>
    <string name="light_theme">Light</string>
    <string name="dark_theme">Dark</string>

    <!-- QS Tile -->
    <string name="qs_record_title">Record screen</string>

    <!-- Notification -->
    <string name="notif_rec_progress">Recording in progress</string>
    <string name="notif_rec_complete">Recording complete</string>
    <string name="notif_rec_stop">Stop</string>
    <string name="notif_rec_dimiss">Dismiss</string>

    <!-- Share intent -->
    <string name="share_title">Share video</string>
    <string name="multiple_share_title">Share videos</string>

    <!-- Material card -->
    <string name="share">Share</string>
    <string name="delete">Delete</string>

    <!-- Alert dialog for delete action -->
    <string name="delete_dialog_title">Do you want to delete?</string>
    <string name="empty_list">No videos yet :(</string>

    <!-- Permission dialogs -->
    <string name="storage_permission_title">Storage permission required</string>
    <string name="storage_permission_desc">The application needs to access the phone storage to save and list the various recordings</string>
    <string name="overlay_permission_title">Overlay permission optional</string>
    <string name="overlay_permission_desc">The application needs permission to draw overlays for showing the countdown counter over other apps</string>
    <string name="grant">Grant</string>
</resources>
