<!--
  ~     This file is part of Recordie.
  ~
  ~     Recordie is free software: you can redistribute it and/or modify
  ~     it under the terms of the GNU General Public License as published by
  ~     the Free Software Foundation, either version 3 of the License, or
  ~     (at your option) any later version.
  ~
  ~     Recordie is distributed in the hope that it will be useful,
  ~     but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~     GNU General Public License for more details.
  ~
  ~     You should have received a copy of the GNU General Public License
  ~     along with Recordie.  If not, see <https://www.gnu.org/licenses/>.
  -->

<androidx.preference.PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/video_category"/>

    <ListPreference
        app:key="bit_rate_pref"
        app:title="@string/bit_rate_title"
        app:summary="%s"
        app:entries="@array/bit_rate_aliases"
        app:entryValues="@array/bit_rate_values"/>
    
    <ListPreference
        app:key="frame_rate_pref"
        app:title="@string/frame_rate_title"
        app:summary="%s"
        app:entries="@array/frame_rate_aliases"
        app:entryValues="@array/frame_rate_values"/>

    <PreferenceCategory
        android:title="@string/audio_category"/>

    <SwitchPreference
        app:key="audio_recording_pref"
        app:title="@string/audio_recording_title"
        app:defaultValue="false"/>

    <PreferenceCategory
        android:title="@string/misc_category"/>

    <SwitchPreference
        app:key="shake_stop_pref"
        app:title="@string/shake_stop_title"
        app:defaultValue="false"/>

    <SwitchPreference
        app:key="screen_stop_pref"
        app:title="@string/screen_stop_title"
        app:defaultValue="false"/>

    <SeekBarPreference
        app:key="rec_delay_pref"
        app:title="@string/rec_delay_title"
        app:defaultValue="0"
        app:min="0"
        android:max="10"
        app:updatesContinuously="true"
        app:showSeekBarValue="true"
        app:adjustable="true" />

    <PreferenceCategory
        app:key="theme_category"
        android:title="@string/theme_category" />

    <ListPreference
        app:key="theme_mode_pref"
        app:title="@string/dark_mode_title"
        app:summary="%s"
        app:entries="@array/theme_mode_aliases"
        app:entryValues="@array/theme_mode_values" />

</androidx.preference.PreferenceScreen>
